@@ -1,3 +1,5 @@
+fixed a bug where multiple messages could not be copied between folders
+
 changed the load message tracker to synchronize on the folder thread.
 
 fixed a problem where a second request for an invalid message would
